--- a/src/02.Infrastructures/BaseArchitecture.Infrastructures.EF/BaseArchitecture.Infrastructures.EF.csproj
+++ b/src/02.Infrastructures/BaseArchitecture.Infrastructures.EF/BaseArchitecture.Infrastructures.EF.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\01.Core\BaseArchitecture.Domain\BaseArchitecture.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
