internal messaging layer added

--- a/src/03.EndPoints/04.EndPoints.API/04.EndPoints.API.csproj
+++ b/src/03.EndPoints/04.EndPoints.API/04.EndPoints.API.csproj
@@ -16,6 +16,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\01.Core\BaseArchitecture.ApplicationServices\BaseArchitecture.ApplicationServices.csproj" />
       <ProjectReference Include="..\..\02.Infrastructures\BaseArchitecture.Infrastructures.EF\BaseArchitecture.Infrastructures.EF.csproj" />
+      <ProjectReference Include="..\..\02.Infrastructures\BaseArchitecture.Infrastructures.InternalMessaging\BaseArchitecture.Infrastructures.InternalMessaging.csproj" />
     </ItemGroup>
 
 </Project>
