--- a/src/02.Infrastructures/BaseArchitecture.Infrastructures.EF/BaseArchitecture.Infrastructures.EF.csproj
+++ b/src/02.Infrastructures/BaseArchitecture.Infrastructures.EF/BaseArchitecture.Infrastructures.EF.csproj
@@ -10,4 +10,9 @@
       <ProjectReference Include="..\..\01.Core\BaseArchitecture.Domain\BaseArchitecture.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.5" />
+    </ItemGroup>
+
 </Project>
