--- a/src/03.EndPoints/04.EndPoints.API/appsettings.json
+++ b/src/03.EndPoints/04.EndPoints.API/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "connectionString" : "Server=.;Database=BaseArchitecture;Trusted_Connection=True;TrustServerCertificate=true;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
