--- a/src/03.EndPoints/04.EndPoints.API/04.EndPoints.API.csproj
+++ b/src/03.EndPoints/04.EndPoints.API/04.EndPoints.API.csproj
@@ -11,12 +11,21 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+        <PackageReference Include="Hangfire.AspNetCore" Version="1.8.12" />
+        <PackageReference Include="Hangfire.Core" Version="1.8.12" />
+        <PackageReference Include="Hangfire.SqlServer" Version="1.8.12" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\..\01.Core\BaseArchitecture.ApplicationServices\BaseArchitecture.ApplicationServices.csproj" />
       <ProjectReference Include="..\..\02.Infrastructures\BaseArchitecture.Infrastructures.EF\BaseArchitecture.Persistence.EF.csproj" />
       <ProjectReference Include="..\..\02.Infrastructures\BaseArchitecture.Infrastructures.InternalMessaging\BaseArchitecture.Infrastructures.InternalMessaging.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
