--- a/src/03.EndPoints/04.EndPoints.API/04.EndPoints.API.csproj
+++ b/src/03.EndPoints/04.EndPoints.API/04.EndPoints.API.csproj
@@ -9,6 +9,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Autofac" Version="8.0.0" />
+        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
         <PackageReference Include="Hangfire.AspNetCore" Version="1.8.12" />
