--- a/src/03.EndPoints/04.EndPoints.API/04.EndPoints.API.csproj
+++ b/src/03.EndPoints/04.EndPoints.API/04.EndPoints.API.csproj
@@ -20,8 +20,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\01.Core\BaseArchitecture.ApplicationServices\BaseArchitecture.ApplicationServices.csproj" />
-      <ProjectReference Include="..\..\02.Infrastructures\BaseArchitecture.Infrastructures.EF\BaseArchitecture.Persistence.EF.csproj" />
       <ProjectReference Include="..\..\02.Infrastructures\BaseArchitecture.Infrastructures.InternalMessaging\BaseArchitecture.Infrastructures.InternalMessaging.csproj" />
+      <ProjectReference Include="..\..\02.Infrastructures\BaseArchitecture.Persistence.EF\BaseArchitecture.Persistence.EF.csproj" />
     </ItemGroup>
 
     <ItemGroup>
