--- a/test/BaseArchitecture.TestTools/BaseArchitecture.TestTools.csproj
+++ b/test/BaseArchitecture.TestTools/BaseArchitecture.TestTools.csproj
@@ -7,7 +7,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="8.0.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\01.Core\BaseArchitecture.ApplicationServices\BaseArchitecture.ApplicationServices.csproj" />
     <ProjectReference Include="..\..\src\01.Core\BaseArchitecture.Domain\BaseArchitecture.Domain.csproj" />
+    <ProjectReference Include="..\..\src\02.Infrastructures\BaseArchitecture.Infrastructures.InternalMessaging\BaseArchitecture.Infrastructures.InternalMessaging.csproj" />
+    <ProjectReference Include="..\..\src\02.Infrastructures\BaseArchitecture.Persistence.EF\BaseArchitecture.Persistence.EF.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
