--- a/src/03.EndPoints/04.EndPoints.API/04.EndPoints.API.csproj
+++ b/src/03.EndPoints/04.EndPoints.API/04.EndPoints.API.csproj
@@ -30,4 +30,6 @@
       </Content>
     </ItemGroup>
 
+    <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
