--- a/src/02.Infrastructures/BaseArchitecture.Worker.Hangfire/BaseArchitecture.Worker.Hangfire.csproj
+++ b/src/02.Infrastructures/BaseArchitecture.Worker.Hangfire/BaseArchitecture.Worker.Hangfire.csproj
@@ -20,10 +20,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Hangfire.AspNetCore" Version="1.8.12" />
-    <PackageReference Include="Hangfire.Core" Version="1.8.12" />
-    <PackageReference Include="Hangfire.SqlServer" Version="1.8.12" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BaseArchitecture.Infrastructures\BaseArchitecture.Infrastructures.csproj" />
   </ItemGroup>
 
 </Project>
