refactor: rename application service to application

--- a/src/02.Infrastructures/BaseArchitecture.Infrastructures/BaseArchitecture.Infrastructures.csproj
+++ b/src/02.Infrastructures/BaseArchitecture.Infrastructures/BaseArchitecture.Infrastructures.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\01.Core\BaseArchitecture.ApplicationServices\BaseArchitecture.ApplicationServices.csproj" />
+    <ProjectReference Include="..\..\01.Core\BaseArchitecture.Application\BaseArchitecture.Application.csproj" />
     <ProjectReference Include="..\BaseArchitecture.Persistence.EF\BaseArchitecture.Persistence.EF.csproj" />
   </ItemGroup>
 
