refactor: remove builder from test

--- a/src/02.Infrastructures/BaseArchitecture.Worker.Hangfire/appsettings.json
+++ b/src/02.Infrastructures/BaseArchitecture.Worker.Hangfire/appsettings.json
@@ -1,3 +1,3 @@
 {
-  "connectionString" : "Server=.;Database=BaseArchitecture;Trusted_Connection=True;TrustServerCertificate=true;",
+  "connectionString" : "Server=.;Database=BaseArchitecture;Trusted_Connection=True;TrustServerCertificate=true;"
 }
